# RemoteCameraServer

./: .gitignore  CMakeLists.txt
resources/: Thumbs.db  test.yml
samples/: 01_images.h  02_video.h  03_persistence.h  04_gui.h  05_qtgui.h  06_guibuttons.h  07_imageprocessing.h  08_aoi.h  09_facedetection.h  10_videosurveillance.h  Thumbs.db  main.cpp
source/: main.cc  utility.h
source/_INSTALL/: launch.bat
